finished home and team page

--- a/source/stylesheets/layouts/_index.scss
+++ b/source/stylesheets/layouts/_index.scss
@@ -1,5 +1,8 @@
 // Import your layouts CSS files here.
 // Examples:
-// @import "dashboard";
-// @import "profile";
-// @import "map";
+// @import "alert";
+// @import "banner";
+// @import "cards";
+// @import "footer";
+// @import "index";
+// @import "navbar";
